feat: fix tokenizer for accented latin alphabet

--- a/corpus/create_tokenized_corpus.ipynb
+++ b/corpus/create_tokenized_corpus.ipynb
@@ -11,9 +11,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "226c2d66aab141efa813e9855f2c8e66",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2b4035c24cc840cb9518008fe22ecd5e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from typing import cast\n",
     "import datasets\n",
@@ -23,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +61,7 @@
        "dict_keys(['アイヌ語鵡川方言日本語‐アイヌ語辞典', 'アイヌ語アーカイブ', 'アイヌタイムズ', '平取町アイヌ口承文芸', 'アイヌ語アーカイブ音声資料', 'AA研アイヌ語資料', '浅井タケ昔話全集I,II', '石狩川のアイヌ語（中級）', 'アイヌ語會話字典', 'アイヌ語口承文芸コーパス', '石狩川のアイヌ語（初級）', '十勝のアイヌ語（初級）', 'アイヌ語ラジオ講座テキスト', 'アイヌ民族文化センター研究紀要', 'アイヌ語音声資料', '十勝のアイヌ語（中級）', '沙流のアイヌ語（初級）', 'カラフトのアイヌ語（中級）', '美幌のアイヌ語（初級）', '鍋沢元蔵筆録ノート', 'アコㇿイタㇰ', '千徳太郎治のピウスツキ宛書簡', '沙流のアイヌ語（中級）', 'カムイユカㇻを聞いてアイヌ語を学ぶ', 'ニューエクスプレスプラス アイヌ語', '萱野茂の国会演説', 'アイヌ神謡集', '幌別のアイヌ語（初級）', '幌別のアイヌ語（中級）', 'ちとせのアイヌご（入門）', '千歳のアイヌ語（初級）', '静内のアイヌ語（初級）', '静内のアイヌ語（中級）', 'プラハ宣言', '美幌のアイヌ語（中級）', 'びほろのあいぬご（入門）', 'ほろべつのアイヌご（入門）', 'カラフトのアイヌ語（初級）', '千歳のアイヌ語（中級）', 'さるのアイヌご（入門）', 'しずないのアイヌご（入門）', 'いしかりがわのアイヌご（入門）', 'ウポポイ館内展示', 'ニューエクスプレス・スペシャル 日本語の隣人たち I+II', 'とかちのアイヌご（入門）', 'からふとのアイヌご（入門）', '第27回アイヌ語弁論大会', 'ピウスツキ記念碑'])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -115,18 +144,18 @@
      "text": [
       "sentence:  ne hi or ta nispa utar ku=koramkor hi ene oka hi aynumosir un aynu utar ka koeturenno sisam mosir ta oka aynu ka ene ne yakka aynu néno aynuitak ani ukoytak pa wa ratci oka apunno oka kuni kosanniyo wa un=kore yan\n",
       "translation:  そこで、私が先生方にお願いしたいということは、北海道にいるアイヌたち、それと一緒に、各地にいるアイヌたちがどのようにしたらアイヌ民族らしくアイヌ語で会話を交わし、静かに豊かに暮らしていけるかを先生方に考えてほしいと私は思い、\n",
-      "words:  ['ne', 'hi', 'or', 'ta', 'nispa', 'utar', 'ku=', 'koramkor', 'hi', 'ene', 'oka', 'hi', 'aynumosir', 'un', 'aynu', 'utar', 'ka', 'koeturenno', 'sisam', 'mosir', 'ta', 'oka', 'aynu', 'ka', 'ene', 'ne', 'yakka', 'aynu', 'n', 'no', 'aynuitak', 'ani', 'ukoytak', 'pa', 'wa', 'ratci', 'oka', 'apunno', 'oka', 'kuni', 'kosanniyo', 'wa', 'un=', 'kore', 'yan']\n",
-      "part of speech:  [['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['noun'], ['noun'], ['verb', 'parti'], ['noun'], ['noun'], ['prefix'], [], ['noun'], ['adv'], ['verb', 'pron', 'noun'], ['noun'], [], ['verb', 'parti'], ['noun'], ['noun'], ['parti', 'noun'], [], ['noun'], ['noun'], ['verb', 'parti'], ['verb', 'pron', 'noun'], ['noun'], ['parti', 'noun'], ['adv'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['parti'], ['noun'], ['suffix'], ['colloc', 'suffix'], [], ['verb', 'postpadv', 'parti', 'noun'], [], ['suffix', 'adv', 'verb', 'auxverb', 'root', 'noun'], ['parti'], [], ['verb', 'pron', 'noun'], ['adv'], ['verb', 'pron', 'noun'], ['noun'], [], ['parti'], ['prefix'], ['verb'], ['parti']]\n",
+      "words:  ['ne', 'hi', 'or', 'ta', 'nispa', 'utar', 'ku=', 'koramkor', 'hi', 'ene', 'oka', 'hi', 'aynumosir', 'un', 'aynu', 'utar', 'ka', 'koeturenno', 'sisam', 'mosir', 'ta', 'oka', 'aynu', 'ka', 'ene', 'ne', 'yakka', 'aynu', 'néno', 'aynuitak', 'ani', 'ukoytak', 'pa', 'wa', 'ratci', 'oka', 'apunno', 'oka', 'kuni', 'kosanniyo', 'wa', 'un=', 'kore', 'yan']\n",
+      "part of speech:  [['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['noun'], ['noun'], ['verb', 'parti'], ['noun'], ['noun'], ['prefix'], [], ['noun'], ['adv'], ['verb', 'pron', 'noun'], ['noun'], [], ['verb', 'parti'], ['noun'], ['noun'], ['parti', 'noun'], [], ['noun'], ['noun'], ['verb', 'parti'], ['verb', 'pron', 'noun'], ['noun'], ['parti', 'noun'], ['adv'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['parti'], ['noun'], [], [], ['verb', 'postpadv', 'parti', 'noun'], [], ['suffix', 'adv', 'verb', 'auxverb', 'root', 'noun'], ['parti'], [], ['verb', 'pron', 'noun'], ['adv'], ['verb', 'pron', 'noun'], ['noun'], [], ['parti'], ['prefix'], ['verb'], ['parti']]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "sentence:  teeta anakne aynumosir mosir so ka ta aynu patek an hi ta anakne uwepeker koraci sinne yuk ne ciki sípe ne ciki nep pakno oka p ne kusu nep a=e rusuy nep a=konrusuy somo ki no aynu patek oka hi ne a korka ne usike un sísam ne manu p upas horutke ekannayukar ek pa ruwe ne.\n",
       "translation:  ずっと昔、アイヌ民族の静かな大地、北海道にアイヌ民族だけが暮らしていた時代、アイヌの昔話と全く同じに、シカであってもシャケであってもたくさんいたので、何を食べたいとも、何を欲しいとも思わず、アイヌ民族だけで暮らしていたが、そのところへ和人という違う民族が雪なだれのように移住してきたのであります。\n",
-      "words:  ['teeta', 'anakne', 'aynumosir', 'mosir', 'so', 'ka', 'ta', 'aynu', 'patek', 'an', 'hi', 'ta', 'anakne', 'uwepeker', 'koraci', 'sinne', 'yuk', 'ne', 'ciki', 's', 'pe', 'ne', 'ciki', 'nep', 'pakno', 'oka', 'p', 'ne', 'kusu', 'nep', 'a=', 'e', 'rusuy', 'nep', 'a=', 'konrusuy', 'somo', 'ki', 'no', 'aynu', 'patek', 'oka', 'hi', 'ne', 'a', 'korka', 'ne', 'usike', 'un', 's', 'sam', 'ne', 'manu', 'p', 'upas', 'horutke', 'ekannayukar', 'ek', 'pa', 'ruwe', 'ne']\n",
-      "part of speech:  [['noun'], ['parti'], [], ['noun'], ['parti', 'noun'], ['parti', 'noun'], ['verb', 'parti'], ['noun'], ['adv'], ['verb', 'root', 'parti'], ['noun'], ['verb', 'parti'], ['parti'], ['noun'], ['adv'], [], ['noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['parti'], [], ['noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['parti'], ['noun'], ['adv'], ['verb', 'pron', 'noun'], ['suffix'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['adv', 'parti'], ['noun'], ['verb', 'prefix'], ['verb', 'interj', 'root'], ['parti'], ['noun'], ['verb', 'prefix'], [], ['adv'], ['verb'], ['colloc', 'suffix'], ['noun'], ['adv'], ['verb', 'pron', 'noun'], ['noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['verb', 'auxverb'], ['parti'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], [], ['verb', 'parti'], [], ['noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], [], ['suffix'], ['noun'], [], [], ['verb'], ['suffix', 'adv', 'verb', 'auxverb', 'root', 'noun'], ['verb', 'noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti']]\n",
+      "words:  ['teeta', 'anakne', 'aynumosir', 'mosir', 'so', 'ka', 'ta', 'aynu', 'patek', 'an', 'hi', 'ta', 'anakne', 'uwepeker', 'koraci', 'sinne', 'yuk', 'ne', 'ciki', 'sípe', 'ne', 'ciki', 'nep', 'pakno', 'oka', 'p', 'ne', 'kusu', 'nep', 'a=', 'e', 'rusuy', 'nep', 'a=', 'konrusuy', 'somo', 'ki', 'no', 'aynu', 'patek', 'oka', 'hi', 'ne', 'a', 'korka', 'ne', 'usike', 'un', 'sísam', 'ne', 'manu', 'p', 'upas', 'horutke', 'ekannayukar', 'ek', 'pa', 'ruwe', 'ne']\n",
+      "part of speech:  [['noun'], ['parti'], [], ['noun'], ['parti', 'noun'], ['parti', 'noun'], ['verb', 'parti'], ['noun'], ['adv'], ['verb', 'root', 'parti'], ['noun'], ['verb', 'parti'], ['parti'], ['noun'], ['adv'], [], ['noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['parti'], [], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['parti'], ['noun'], ['adv'], ['verb', 'pron', 'noun'], ['suffix'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['adv', 'parti'], ['noun'], ['verb', 'prefix'], ['verb', 'interj', 'root'], ['parti'], ['noun'], ['verb', 'prefix'], [], ['adv'], ['verb'], ['colloc', 'suffix'], ['noun'], ['adv'], ['verb', 'pron', 'noun'], ['noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['verb', 'auxverb'], ['parti'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], [], ['verb', 'parti'], [], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], [], ['suffix'], ['noun'], [], [], ['verb'], ['suffix', 'adv', 'verb', 'auxverb', 'root', 'noun'], ['verb', 'noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti']]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "sentence:  utcike kuni p raka sak pe ku=ne p ne kusu teetakur néno aynuitak ku=ye enitan pe somo ne korka tananto anakne sisammosir un nispa utar katkemat utar an uske ta aynuitak ene an pe ne hi ene a=ye p hi ci=koykokanu ku=ki rusuy kusu aynuitak itak pirka p k=eutukanke wa ku=ye hawe ne.\n",
       "translation:  意気地のない者、至らない者、私なので、昔のアイヌのようにアイヌの言葉を上手には言えないけれども、きょうのこの日は、日本国の国会議員の諸先生方がおられる所に、アイヌ語というものがどのようなものか、どのような言い方をするものかお聞き願いたいと私は考え、アイヌ語を私はここで言わせていただいたのであります。\n",
-      "words:  ['utcike', 'kuni', 'p', 'raka', 'sak', 'pe', 'ku=', 'ne', 'p', 'ne', 'kusu', 'teetakur', 'n', 'no', 'aynuitak', 'ku=', 'ye', 'enitan', 'pe', 'somo', 'ne', 'korka', 'tananto', 'anakne', 'sisammosir', 'un', 'nispa', 'utar', 'katkemat', 'utar', 'an', 'uske', 'ta', 'aynuitak', 'ene', 'an', 'pe', 'ne', 'hi', 'ene', 'a=', 'ye', 'p', 'hi', 'ci=', 'koykokanu', 'ku=', 'ki', 'rusuy', 'kusu', 'aynuitak', 'itak', 'pirka', 'p', 'k=', 'eutukanke', 'wa', 'ku=', 'ye', 'hawe', 'ne']\n",
-      "part of speech:  [[], ['noun'], ['suffix'], [], ['noun'], ['noun'], ['prefix'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['suffix'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['adv', 'parti'], [], ['suffix'], ['colloc', 'suffix'], [], ['prefix'], ['verb', 'noun'], [], ['noun'], ['adv'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['parti'], [], ['parti'], [], ['verb', 'parti'], ['noun'], ['noun'], ['noun'], ['noun'], ['verb', 'root', 'parti'], ['noun'], ['verb', 'parti'], [], ['adv'], ['verb', 'root', 'parti'], ['noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['noun'], ['adv'], ['verb', 'prefix'], ['verb', 'noun'], ['suffix'], ['noun'], ['verb', 'prefix'], [], ['prefix'], ['verb'], ['parti'], ['adv', 'parti'], [], ['verb', 'noun'], ['verb', 'adv'], ['suffix'], [], [], ['parti'], ['prefix'], ['verb', 'noun'], ['noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti']]\n",
+      "words:  ['utcike', 'kuni', 'p', 'raka', 'sak', 'pe', 'ku=', 'ne', 'p', 'ne', 'kusu', 'teetakur', 'néno', 'aynuitak', 'ku=', 'ye', 'enitan', 'pe', 'somo', 'ne', 'korka', 'tananto', 'anakne', 'sisammosir', 'un', 'nispa', 'utar', 'katkemat', 'utar', 'an', 'uske', 'ta', 'aynuitak', 'ene', 'an', 'pe', 'ne', 'hi', 'ene', 'a=', 'ye', 'p', 'hi', 'ci=', 'koykokanu', 'ku=', 'ki', 'rusuy', 'kusu', 'aynuitak', 'itak', 'pirka', 'p', 'k=', 'eutukanke', 'wa', 'ku=', 'ye', 'hawe', 'ne']\n",
+      "part of speech:  [[], ['noun'], ['suffix'], [], ['noun'], ['noun'], ['prefix'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['suffix'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['adv', 'parti'], [], [], [], ['prefix'], ['verb', 'noun'], [], ['noun'], ['adv'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['parti'], [], ['parti'], [], ['verb', 'parti'], ['noun'], ['noun'], ['noun'], ['noun'], ['verb', 'root', 'parti'], ['noun'], ['verb', 'parti'], [], ['adv'], ['verb', 'root', 'parti'], ['noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti'], ['noun'], ['adv'], ['verb', 'prefix'], ['verb', 'noun'], ['suffix'], ['noun'], ['verb', 'prefix'], [], ['prefix'], ['verb'], ['parti'], ['adv', 'parti'], [], ['verb', 'noun'], ['verb', 'adv'], ['suffix'], [], [], ['parti'], ['prefix'], ['verb', 'noun'], ['noun'], ['pron', 'pronoun', 'verb', 'determiner', 'parti']]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "sentence:  ue[y]hopunpa\n",
       "translation:  一斉に湧き上がる。\n",
@@ -192,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
