feat: deal with -(a)hcihi for karahuto generation

--- a/dictionary/generate_karahuto_data.ipynb
+++ b/dictionary/generate_karahuto_data.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,10 +48,9 @@
       "adn\n",
       "adv\n",
       "advp\n",
-      "aux\n",
       "auxv\n",
+      "cconj\n",
       "colloc\n",
-      "conj\n",
       "cop\n",
       "int\n",
       "intj\n",
@@ -68,6 +67,7 @@
       "pron\n",
       "rel\n",
       "root\n",
+      "sconj\n",
       "sfp\n",
       "sfx\n",
       "v\n",
@@ -127,10 +127,24 @@
     "            singular = term[\"lemma\"][:-3]\n",
     "        else:\n",
     "            singular = term[\"lemma\"][:-2]\n",
-    "        if singular in terms_index:\n",
+    "\n",
+    "        if singular in terms_index and not term[\"glosses\"]:\n",
     "            term[\"glosses\"] = next(t for t in terms if t[\"lemma\"] == singular)[\"glosses\"]\n",
+    "\n",
+    "        if singular in terms_index and not term[\"poses\"]:\n",
     "            term[\"poses\"] = next(t for t in terms if t[\"lemma\"] == singular)[\"poses\"]\n",
     "\n",
+    "    if term[\"lemma\"] == \"hcihi\":\n",
+    "        if term[\"lemma\"].endswith(\"ahcihi\"):\n",
+    "            singular = term[\"lemma\"][:-4]\n",
+    "        else:\n",
+    "            singular = term[\"lemma\"][:-3]  \n",
+    "        \n",
+    "        if not term[\"poses\"]:\n",
+    "            term[\"poses\"] = [\"n\"]\n",
+    "\n",
+    "        if singular in terms_index and not term[\"glosses\"]:\n",
+    "            term[\"glosses\"] = [g + \"こと\" for g in next(t for t in terms if t[\"lemma\"] == singular)[\"glosses\"] if g.startswith(\"n\") ]\n",
     "\n",
     "POS_TABLE = {\n",
     "    \"自動詞\": \"vt\",\n",
