feat: add derivable data of karahuto

--- a/dictionary/generate_karahuto_data.ipynb
+++ b/dictionary/generate_karahuto_data.ipynb
@@ -16,18 +16,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
+    "from typing import TypedDict, cast\n",
+    "\n",
+    "class RawTerm(TypedDict):\n",
+    "    lemma: str\n",
+    "    glosses: list[str]\n",
+    "    poses: list[str]\n",
+    "\n",
     "with open('output/ff-ainu-karahuto-terms.json') as f:\n",
-    "    terms = json.load(f)"
+    "    raw_terms = cast(list[RawTerm], json.load(f))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +50,15 @@
     }
    ],
    "source": [
-    "terms = [\n",
+    "class Term(TypedDict):\n",
+    "    lemma: str\n",
+    "    ja: list[str]\n",
+    "    en: list[str]\n",
+    "    ru: list[str]\n",
+    "    poses: list[str]\n",
+    "    frequency: int\n",
+    "\n",
+    "terms: list[Term] = [\n",
     "    {\n",
     "        \"lemma\": term[\"lemma\"],\n",
     "        \"ja\": term[\"glosses\"],\n",
@@ -52,7 +67,7 @@
     "        \"poses\": term[\"poses\"],\n",
     "        \"frequency\": 0,\n",
     "    }\n",
-    "    for term in terms\n",
+    "    for term in raw_terms\n",
     "]\n",
     "\n",
     "for t in terms[0:5]:\n",
@@ -61,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -427,14 +442,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
-    "terms_index = set(term[\"lemma\"] for term in terms)\n",
-    "\n",
     "with open(\"input/sakhalin/additional_terms.json\") as f:\n",
-    "    additional_terms = json.load(f)\n",
+    "    additional_terms = cast(list[Term], json.load(f))\n",
     "\n",
     "    for term in additional_terms:\n",
     "        if term[\"lemma\"] not in terms_index:\n",
@@ -448,6 +461,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'lemma': 'manuy', 'ja': ['という', 'そうだ'], 'en': ['called', 'it seems'], 'ru': ['называется', 'кажется'], 'poses': ['auxv'], 'frequency': 2388}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import TypedDict, cast, NotRequired\n",
+    "\n",
+    "PartialTerm = TypedDict(\"PartialTerm\", {\"ja\": list[str], \"en\": list[str], \"ru\": list[str], \"poses\": list[str], \"frequency\": int}, total=False)\n",
+    "\n",
+    "DerivedFrom = TypedDict(\"DerivedFrom\", {\"lemma\": str, \"from\": str, \"overwrite\": NotRequired[PartialTerm]  })\n",
+    "\n",
+    "with open(\"input/sakhalin/derived_from.json\") as f:\n",
+    "    derived_from = cast(list[DerivedFrom], json.load(f))\n",
+    "\n",
+    "    for term in derived_from:\n",
+    "        if term[\"from\"] not in terms_index:\n",
+    "            print(f\"{term['from']} not found\")\n",
+    "            continue\n",
+    "\n",
+    "        found_term = next(t for t in terms if t[\"lemma\"] == term[\"from\"])\n",
+    "        overwrite: PartialTerm = term.get(\"overwrite\", {})\n",
+    "\n",
+    "        constructed_term: Term = {\n",
+    "            \"lemma\": term[\"lemma\"],\n",
+    "            \"ja\": overwrite.get(\"ja\", []) or found_term[\"ja\"],\n",
+    "            \"en\": term.get(\"overwrite\", {}).get(\"en\", []) or found_term[\"en\"],\n",
+    "            \"ru\": term.get(\"overwrite\", {}).get(\"ru\", []) or found_term[\"ru\"],\n",
+    "            \"poses\": term.get(\"overwrite\", {}).get(\"poses\", []) or found_term[\"poses\"],\n",
+    "            \"frequency\": term.get(\"overwrite\", {}).get(\"frequency\", 0)\n",
+    "            or found_term[\"frequency\"],\n",
+    "        }\n",
+    "\n",
+    "        print(constructed_term)\n",
+    "\n",
+    "        target_term = next((t for t in terms if t[\"lemma\"] == term[\"lemma\"]), None)\n",
+    "\n",
+    "        if target_term is None:\n",
+    "            terms.append(constructed_term)\n",
+    "        else:\n",
+    "            target_term[\"ja\"] = constructed_term[\"ja\"]\n",
+    "            target_term[\"en\"] = constructed_term[\"en\"]\n",
+    "            target_term[\"ru\"] = constructed_term[\"ru\"]\n",
+    "            target_term[\"poses\"] = constructed_term[\"poses\"]\n",
+    "            target_term[\"frequency\"] = constructed_term[\"frequency\"]\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -456,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,13 +541,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{\"lemma\": \"neya\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"ohta\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [\"colloc\"], \"frequency\": 0},\n",
+      "{\"lemma\": \"neeteh\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"acahcipo\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"omantene\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"iineahsuy\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"anayne\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"uta\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"hii\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"okaaketa\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"waa\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"hawehe\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [\"n\"], \"frequency\": 0},\n",
+      "{\"lemma\": \"otakaata\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"sani\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [\"n\"], \"frequency\": 0},\n",
+      "{\"lemma\": \"taata\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"kayki\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"kimma\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"makanihi\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"inoskun\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"macihi\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [\"n\"], \"frequency\": 0},\n",
+      "{\"lemma\": \"toyree\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"hecirehci\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"soyta\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"soosika\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"kinataa\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"yeesu\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"kinta\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"sinkeikehe\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"ahcahcipo\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"simah\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"cehkoyki\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"roo\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"yoy\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"nukaraha\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"soyun\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"sannupista\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
+      "{\"lemma\": \"pis\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [\"n\"], \"frequency\": 0},\n",
+      "{\"lemma\": \"sinenehka\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"enean\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"kiitun\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
       "{\"lemma\": \"ii\", \"ja\": [], \"en\": [], \"ru\": [], \"poses\": [], \"frequency\": 0},\n",
@@ -2060,15 +2166,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All terms: 2777\n",
-      "All translated: 1223\n",
+      "All terms: 2817\n",
+      "All translated: 1225\n",
       "Translated only ja: 48\n"
      ]
     }
@@ -2085,7 +2191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
